Fixed text alignment in render.html

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -32,7 +32,7 @@ canvas{
     position: absolute;
     top: 10px;
     width: 100%;
-    text-align: center;
+    text-align: left;
     z-index: 99;
     display: block;
     color: whitesmoke
